[gd_scene load_steps=13 format=3]

[ext_resource type="Script" path="res://scripts/minigames/DragThrowGame.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/objects/BallDragThrow.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/ui/PauseMenu.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/ui/GameOverMenu.tscn" id="4"]
[ext_resource type="PackedScene" path="res://scenes/objects/LaserWall.tscn" id="5"]
[ext_resource type="Script" path="res://scripts/utils/CameraShake.gd" id="6"]
[ext_resource type="PackedScene" path="res://scenes/objects/KillZone.tscn" id="7"]
[ext_resource type="Shader" path="res://assets/shaders/background.gdshader" id="8"]
[ext_resource type="Shader" path="res://assets/shaders/scanlines.gdshader" id="9"]
[ext_resource type="PackedScene" path="res://scenes/objects/PowerupDrop.tscn" id="10"]

[sub_resource type="ShaderMaterial" id="bg_mat"]
shader = ExtResource("8")
shader_parameter/color_top = Color(0.02, 0.04, 0.12, 1)
shader_parameter/color_bottom = Color(0.01, 0.01, 0.02, 1)
shader_parameter/accent_color = Color(0, 1, 1, 1)
shader_parameter/accent_strength = 0.15
shader_parameter/noise_amount = 0.035
shader_parameter/vignette_strength = 0.38

[sub_resource type="ShaderMaterial" id="scan_mat"]
shader = ExtResource("9")

[node name="DragThrowGame" type="Node2D"]
script = ExtResource("1")
ball_scene = ExtResource("2")
powerup_scene = ExtResource("10")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(540, 1200)
script = ExtResource("6")

[node name="Background" type="ColorRect" parent="."]
offset_left = -100.0
offset_top = -200.0
offset_right = 1200.0
offset_bottom = 2600.0
z_index = -100
mouse_filter = 2
material = SubResource("bg_mat")

[node name="Scanlines" type="ColorRect" parent="."]
offset_left = -100.0
offset_top = -200.0
offset_right = 1200.0
offset_bottom = 2600.0
z_index = -95
mouse_filter = 2
material = SubResource("scan_mat")

[node name="LaserWallLeft" parent="." instance=ExtResource("5")]
position = Vector2(25, 1200)
wall_type = 1

[node name="LaserWallRight" parent="." instance=ExtResource("5")]
position = Vector2(1055, 1200)
wall_type = 0

[node name="WarningLeft" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = -200.0
offset_right = 10.0
offset_bottom = 2600.0
color = Color(1, 0, 1, 0.0)
z_index = -20
mouse_filter = 2

[node name="WarningRight" type="ColorRect" parent="."]
offset_left = 1070.0
offset_top = -200.0
offset_right = 1090.0
offset_bottom = 2600.0
color = Color(0, 1, 1, 0.0)
z_index = -20
mouse_filter = 2

[node name="KillZone" parent="." instance=ExtResource("7")]
position = Vector2(540, 2450)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 340.0
offset_top = 30.0
offset_right = 740.0
offset_bottom = 100.0
mouse_filter = 2
theme_override_font_sizes/font_size = 52
theme_override_colors/font_color = Color(0.9, 0.9, 1, 0.9)
text = "0"
horizontal_alignment = 1
pivot_offset = Vector2(200, 35)

[node name="ComboLabel" type="Label" parent="CanvasLayer"]
offset_left = 290.0
offset_top = 220.0
offset_right = 790.0
offset_bottom = 320.0
mouse_filter = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 56
text = "x0"
horizontal_alignment = 1
vertical_alignment = 1
pivot_offset = Vector2(250, 50)
visible = false

[node name="StreakBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 140.0
offset_top = 145.0
offset_right = 940.0
offset_bottom = 175.0
min_value = 0.0
max_value = 100.0
value = 0.0
show_percentage = false
mouse_filter = 2

[node name="StreakLabel" type="Label" parent="CanvasLayer"]
offset_left = 140.0
offset_top = 110.0
offset_right = 940.0
offset_bottom = 145.0
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.7, 0.8, 1, 0.85)
text = "STREAK"
horizontal_alignment = 1
mouse_filter = 2

[node name="PauseButton" type="Button" parent="CanvasLayer"]
offset_left = 940.0
offset_top = 30.0
offset_right = 1050.0
offset_bottom = 90.0
mouse_filter = 0
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.5, 0.5, 0.6, 0.7)
text = "II"
flat = true

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("3")]
visible = false

[node name="GameOverMenu" parent="CanvasLayer" instance=ExtResource("4")]
visible = false
